fix:login and register

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,7 @@ DB_HOST='localhost'
 DB_USERNAME='root'
 DB_PASSWORD=''
 DB_NAME='wms'
+DB_PORT="3306"
 SMTP_MAIL='rajanpatel9708@gmail.com'
 SMTP_PASSWORD='cgmwfybamljnbnla'
-JWT_SECRETE='wms-super-secret-key'
+JWT_SECRET='wms-super-secret-key'
